# CrossPlatformTest

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Concepts/: CMakeLists.txt
Concepts/src/: ConceptsPCH.hpp  ConceptsTest.cpp
Concepts/src/ConceptsRequires/: ConceptRequires.hpp  ConceptsRequires.cpp  ConstraintSamples.hpp  OverloadResOLD.hpp  OverloadResolution.hpp
CrossPlatformTest/: CMakeLists.txt
CrossPlatformTest/src/: Coroutines.hpp  CrossPlatformTest.cpp  CrossPlatformTest.h
CrossPlatformTest/src/Coroutines/: CoroutineAsyncStreamParser.hpp  CoroutineAsyncStreamParserV2.hpp  CoroutinesCustomAllocator.hpp  CoroutinesHeader.hpp
CrossPlatformTest/src/Modules/: ModuleTest01.cpp
CrossPlatformTest/src/Ranges/: CustomTakeView.hpp  RangeUtils.hpp  RangesBasic.hpp  RangesHeaders.hpp  RangesViewsAdaptor.hpp
Ranges/: CMakeLists.txt  CMakeListsALT.txt
Ranges/src/: CustomTakeView.hpp  RangeUtils.hpp  RangesBasic.hpp  RangesCompileTimeSize.cpp  RangesCompileTimeSize.hpp  RangesHeaders.hpp  RangesTest.cpp  RangesUseCases.hpp  RangesViewsAdaptor.hpp  RangesViewsComponents.cpp  RangesViewsComponents.hpp
Ranges/src/CompileTimeThings/: CompileRunTime.cpp  CompileRunTime.hpp  CompileTimeByteSwap.hpp  CompileTimeCarRacing.hpp  ConstEvalUseCases.cpp  ConstEvalUseCases.hpp  ConstexprString.hpp  ConstexprUniquePtr.hpp  CustomFormatterTypeSafe.hpp
Ranges/src/GenericFunctionsCpp20/: GenericFunctions.cpp  GenericFunctions.hpp
Ranges/src/NTTP/: NTTP.cpp  NTTP.hpp  NTTPFixedString.hpp  NTTPUtils.hpp  NamedTupple.cpp  NamedTupple.hpp
Ranges/src/SpaceShipOperator/: SpaceShipOperTests.cpp  SpaceShipOperTests.hpp
Ranges/src/Span/: SpanTest.hpp  SpanUtils.hpp
Ranges/src/TemplatesMetaProg/: DecltypeAutoUses.hpp  MetaProgInHeritance.hpp  MetaProgLinearSearch.hpp  MetaProgramBasics.cpp  MetaProgramBasics.hpp  MetaProgramSortTypes.hpp  NamedTuppleImp.hpp
Ranges/src/Views/: ViewTests.cpp  ViewTests.hpp
